<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <FrameLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:clickable="true" >

            <ImageView
                android:id="@+id/cloud"
                android:layout_width="300dp"
                android:layout_height="139dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/cloud0" />

            <ImageView
                android:id="@+id/hero"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/hero" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:alpha="0.5"
                android:lines="1"
                android:text="@string/score"
                android:textColor="#000"
                android:textSize="24sp" />

            <ToggleButton
                android:id="@+id/btn_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="top|right"
                android:layout_margin="7dp"
                android:background="@drawable/btn_play"
                android:onClick="onClick"
                android:textOff=""
                android:textOn="" />

            <TextView
                android:id="@+id/mess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#80000000"
                android:gravity="center"
                android:lines="1"
                android:text="@string/game_over"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="272dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:contentDescription="@null"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical" >




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_sound"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_start"
                        android:onClick="onClick"
                        android:text="@string/btn_mute"
                        android:textColor="#FFF"
                        />

                    <Button
                        android:id="@+id/btn_start"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_start"
                        android:onClick="onClick"
                        android:text="@string/btn_start"
                        android:textColor="#FFF" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_exit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:background="@drawable/btn_start"
                    android:text="@string/btn_exit"
                    android:textColor="#FFF"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/score"
                android:textColor="#FFF"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_high_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/high_score"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:background="@drawable/btn_start"
                    android:text="@string/btn_home"
                    android:textColor="#FFF"
                    />

                <Button
                    android:id="@+id/btn_start2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_start"
                    android:onClick="onClick"
                    android:text="@string/btn_start2"
                    android:textColor="#FFF" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>